--- a/static/account/css/login.css
+++ b/static/account/css/login.css
@@ -101,7 +101,7 @@ main h1 {
 
 main .login_form_jmj {
 	width: 40%;
-	height: 290px;
+	min-height: 290px;
 	background: #0f1a33;
 	border-radius: 20px;
 	text-align: center;
@@ -112,7 +112,7 @@ main .login_form_jmj {
 
 main .login_form_jmj .login_jmj {
 	width: 100%;
-	height: 220px;
+	min-height: 220px;
 	background: #344e87;
 	text-align: center;
 	margin: 0 auto;
@@ -134,6 +134,19 @@ main .login_form_jmj .login_jmj p label {
     min-width: 100px;
 }
 
+main .login_form_jmj .login_jmj .errorlist {
+	color: #ff6b6b;
+	font-size: 14px;
+	margin: 8px 30px;
+	text-align: center;
+	border-radius: 8px;
+	list-style: none;
+}
+
+main .login_form_jmj .login_jmj .errorlist li {
+	margin: 3px 0;
+}
+
 main .login_form_jmj .login_jmj form button {
 	margin: 10px auto;
 	width: 30%;
@@ -145,6 +158,7 @@ main .login_form_jmj .login_jmj form button {
 	border-radius: 10px;
 	background: #fff;
 	border: 1px solid #000;
+	transition: all 0.2s ease;
 }
 
 main .login_form_jmj .login_jmj form button:hover{
@@ -155,10 +169,16 @@ main .login_form_jmj .login_jmj form button:hover{
 }
 
 main .login_form_jmj .login_jmj a {
+    display: inline-block;
+    text-decoration: none;
     width: 100%;
+    height: 40px;
+    line-height: 40px;
     border: 2px solid #fff;
     color: #fff;
-    align-items: center;
+    border-radius: 10px;
+    margin: 5px 0;
+    transition: all 0.2s ease;
 }
 
 main .login_form_jmj .login_jmj a:hover {
@@ -176,11 +196,12 @@ main .login_form_jmj .login_jmj a img {
     vertical-align: middle;
 }
 
-main .login_form_jmj a {
+main .login_form_jmj > a {
     display: inline-block;
     text-decoration: none;
 	width: 30%;
 	height: 30px;
+	line-height: 30px;
 	font-size: 25px;
 	font-family: "Jersey 10", sans-serif;
 	font-weight: 400;
@@ -189,9 +210,10 @@ main .login_form_jmj a {
 	border: 2px solid #00FE0D;
     color: #00FE0D;
     margin-top: 10px;
+    transition: all 0.2s ease;
 }
 
-main .login_form_jmj a:hover {
+main .login_form_jmj > a:hover {
     color: #fff;
     background: #00FE0D;
     border-color: #fff;
